99-external-service/00-kube-00-coredns-metallb.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-dns-external
  namespace: kube-system
  annotations:
    metallb.io/allow-shared-ip: "shared-192.168.12.90"   # 可选：允许IP共享
spec:
  type: LoadBalancer
  selector:
    k8s-app: "kube-dns"
  ports:
    - port: 53
      targetPort: 53
      protocol: TCP
      name: kube-dns
  loadBalancerIP: "192.168.12.90"  # 必须在static-ips-pool范围内
