99-external-service/01-mysql-01-mysql-metallb-for-debug.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-external
  namespace: sothothv2-ns
  annotations:
    metallb.io/allow-shared-ip: "shared-192.168.12.90"   # 可选：允许IP共享
spec:
  type: LoadBalancer
  selector:
    app: mysql
    tier: mysql
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
      name: mysql-external
  loadBalancerIP: "172.31.30.100"  # 必须在static-ips-pool范围内
