99-external-service/05-client-script-03-unversal-portal-metallb.yaml
apiVersion: v1
kind: Service
metadata:
  name: universal-portal-nginx-proxy-service
  namespace: sothothv2-ns
  annotations:
    metallb.io/allow-shared-ip: "shared-192.168.12.90"   # 可选：允许IP共享
spec:
  type: LoadBalancer
  selector:
    app: "universal-portal-nginx-proxy"
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: universal-portal-nginx-proxy
  loadBalancerIP: "192.168.12.90"  # 必须在static-ips-pool范围内
