99-external-service/06-nacos-01-register-metallb-for-debug.yaml
apiVersion: v1
kind: Service
metadata:
  name: nacos-register-external
  namespace: sothothv2-ns
  annotations:
    metallb.io/allow-shared-ip: "shared-192.168.12.90"   # 可选：允许IP共享
spec:
  type: LoadBalancer
  selector:
    app: nacos
  ports:
    - port: 8848
      targetPort: 8848
      protocol: TCP
  loadBalancerIP: "${METALLB_SHARED_LB_IP}"  # 必须在static-ips-pool范围内
