99-external-service/09-redis-00-metallb-for-debug.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-external
  namespace: sothothv2-ns
  annotations:
    metallb.io/allow-shared-ip: "shared-192.168.12.90"   # 可选：允许IP共享
spec:
  type: LoadBalancer
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  loadBalancerIP: "172.31.30.100"  # 必须在static-ips-pool范围内
