99-external-service/11-new-api-00-metallb-for-debug.yaml
apiVersion: v1
kind: Service
metadata:
  name: new-api-external
  namespace: sothothv2-ns
  annotations:
    metallb.io/allow-shared-ip: "shared-192.168.12.90"   # 可选：允许IP共享
spec:
  type: LoadBalancer
  selector:
    name: new-api
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  loadBalancerIP: "192.168.12.90"  # 必须在static-ips-pool范围内
