99-external-service/99-vscode-web-manager-01-for-debug.yaml
apiVersion: v1
kind: Service
metadata:
  name: vscode-external
  namespace: sothothv2-ns
  annotations:
    metallb.io/allow-shared-ip: "shared-192.168.12.90"   # 可选：允许IP共享
spec:
  type: LoadBalancer
  selector:
    name: "vscode-web-manager"
  ports:
    - port: 8081
      targetPort: 80
      protocol: TCP
  loadBalancerIP: "192.168.12.90"  # 必须在static-ips-pool范围内
