99-external-service/metallb-00-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
  namespace: sothothv2-ns
  annotations:
    metallb.io/allow-shared-ip: "shared-192.168.12.90"   # 可选：允许IP共享
spec:
  type: LoadBalancer
  selector:
    app: "external-service-nginx-proxy"
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: external-service-nginx-proxy
  loadBalancerIP: "192.168.12.90"  # 必须在static-ips-pool范围内
