99-external-service/04-static-binary-01-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-binary-ingress
  namespace: sothothv2-ns
  annotations:
    # 启用 HTTPS 重定向（如果需要）
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # 如果需要 websocket 支持
    nginx.ingress.kubernetes.io/websocket-services: "static-binary"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    # 支持最大10G文件上传
    nginx.ingress.kubernetes.io/proxy-body-size: "10240m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - static-binary.sothothv2.com
      secretName: wildcard-sothothv2.com-tls
  rules:
    - host: static-binary.sothothv2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static-binary
                port:
                  number: 80
