99-external-service/13-secflow-00-ingress-for-debug.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  name: external-menu
#  namespace: secflow-ns
#spec:
#  type: ClusterIP
#  ports:
#  - port: 80
#    targetPort: 10002
#    protocol: TCP
#---
#apiVersion: v1
#kind: Endpoints
#metadata:
#  name: external-menu
#  namespace: secflow-ns
#subsets:
#  - addresses:
#      - ip: 192.168.12.44
#    ports:
#      - port: 10002
#        protocol: TCP
#
#---
#
#apiVersion: v1
#kind: Service
#metadata:
#  name: external-auth
#  namespace: secflow-ns
#spec:
#  type: ClusterIP
#  ports:
#  - port: 80
#    targetPort: 10003
#    protocol: TCP
#---
#apiVersion: v1
#kind: Endpoints
#metadata:
#  name: external-auth
#  namespace: secflow-ns
#subsets:
#  - addresses:
#      - ip: 192.168.12.44
#    ports:
#      - port: 10003
#        protocol: TCP
#
#---
#
#apiVersion: v1
#kind: Service
#metadata:
#  name: external-project
#  namespace: secflow-ns
#spec:
#  type: ClusterIP
#  ports:
#  - port: 80
#    targetPort: 10004
#    protocol: TCP
#---
#apiVersion: v1
#kind: Endpoints
#metadata:
#  name: external-project
#  namespace: secflow-ns
#subsets:
#  - addresses:
#      - ip: 192.168.12.44
#    ports:
#      - port: 10004
#        protocol: TCP
#
#---
#
#apiVersion: v1
#kind: Service
#metadata:
#  name: external-resource
#  namespace: secflow-ns
#spec:
#  type: ClusterIP
#  ports:
#  - port: 80
#    targetPort: 10005
#    protocol: TCP
#---
#apiVersion: v1
#kind: Endpoints
#metadata:
#  name: external-resource
#  namespace: secflow-ns
#subsets:
#  - addresses:
#      - ip: 192.168.12.44
#    ports:
#      - port: 10005
#        protocol: TCP
#
#---
#
##apiVersion: v1
##kind: Service
##metadata:
##  name: static-binary-proxy
##  namespace: secflow-ns  # 与 Ingress 相同的命名空间
##spec:
##  type: ExternalName
##  externalName: static-binary.sothothv2-ns.svc.cluster.local
##  ports:
##  - port: 80
##    targetPort: 80
##    protocol: TCP
##    name: http
##---
#
#apiVersion: v1
#kind: Service
#metadata:
#  name: external-static-binary
#  namespace: secflow-ns
#spec:
#  type: ClusterIP
#  ports:
#  - port: 80
#    targetPort: 10006
#    protocol: TCP
#---
#apiVersion: v1
#kind: Endpoints
#metadata:
#  name: external-static-binary
#  namespace: secflow-ns
#subsets:
#  - addresses:
#      - ip: 192.168.12.44
#    ports:
#      - port: 10006
#        protocol: TCP
#
#
#---
#
#apiVersion: v1
#kind: Service
#metadata:
#  name: secflow-platform-deploy-script-debug
#  namespace: secflow-ns
#spec:
#  type: ClusterIP
#  ports:
#  - port: 80
#    targetPort: 10007
#    protocol: TCP
#---
#apiVersion: v1
#kind: Endpoints
#metadata:
#  name: secflow-platform-deploy-script-debug
#  namespace: secflow-ns
#subsets:
#  - addresses:
#      - ip: 192.168.12.44
#    ports:
#      - port: 10007
#        protocol: TCP
#---
---
apiVersion: v1
kind: Service
metadata:
  name: secflow-platform-agent-debug
  namespace: secflow-ns
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 10008
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: secflow-platform-agent-debug
  namespace: secflow-ns
subsets:
  - addresses:
      - ip: 192.168.12.44
    ports:
      - port: 10008
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: secflow-platform-workflow
  namespace: secflow-ns
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 10009
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: secflow-platform-workflow
  namespace: secflow-ns
subsets:
  - addresses:
      - ip: 192.168.12.44
    ports:
      - port: 10009
        protocol: TCP
---
#
#
#
#apiVersion: v1
#kind: Service
#metadata:
#  name: external-vscode
#  namespace: secflow-ns
#spec:
#  type: ClusterIP
#  ports:
#  - port: 80
#    targetPort: 10100
#    protocol: TCP
#---
#apiVersion: v1
#kind: Endpoints
#metadata:
#  name: external-vscode
#  namespace: secflow-ns
#subsets:
#  - addresses:
#      - ip: 192.168.12.44
#    ports:
#      - port: 10100
#        protocol: TCP
#
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: secflow-ingress
#  namespace: secflow-ns
#  annotations:
#    # 只使用安全的注解
#    # 支持最大10G文件上传
#    nginx.ingress.kubernetes.io/proxy-body-size: "10240m"
#    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
#    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
#    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
#    nginx.ingress.kubernetes.io/location-snippet: |
#          if ($uri ~* "^/api/deploy-script") {
#            rewrite ^/api/deploy-script/(.*)$ /script/$1 break;
#          }
#spec:
#  ingressClassName: nginx
#  rules:
#  - host: secflow-dev.sothothv2.com
#    http:
#      paths:
#      - path: /api/auth
#        pathType: Prefix
#        backend:
#          service:
#            name: external-auth
#            port:
#              number: 80
#
#      - path: /api/agent
#        pathType: Prefix
#        backend:
#          service:
#            name: agent-service-manager-proxy
#            port:
#              number: 80
#
#      - path: /api/project
#        pathType: Prefix
#        backend:
#          service:
#            name: external-project
#            port:
#              number: 80
#      - path: /api/resource
#        pathType: Prefix
#        backend:
#          service:
#            name: external-resource
#            port:
#              number: 80
#      - path: /api/menu
#        pathType: Prefix
#        backend:
#          service:
#            name: external-menu
#            port:
#              number: 80
#      - path: /api/app/code-server
#        pathType: Prefix
#        backend:
#          service:
#            name: external-vscode
#            port:
#              number: 80
#      - path: /api/packages
#        pathType: Prefix
#        backend:
#          service:
#            name: static-binary-proxy
#            port:
#              number: 80
#      - path: /api/deploy-script
#        pathType: Prefix
#        backend:
#          service:
#            name: client-script-proxy
#            port:
#              number: 80



apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secflow-ingress
  namespace: secflow-ns
  annotations:
    # 只使用安全的注解
    # 支持最大10G文件上传
    nginx.ingress.kubernetes.io/proxy-body-size: "10240m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - secflow.sothothv2.com
    secretName: wildcard-sothothv2.com-tls
  rules:
  - host: secflow.sothothv2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: secflow-platform-frontend
            port:
              number: 80
      - path: /api/menu
        pathType: Prefix
        backend:
          service:
            name: secflow-platform-menu
            port:
              number: 80

      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: secflow-platform-auth
            port:
              number: 80

      - path: /api/agent
        pathType: Prefix
        backend:
          service:
            name: secflow-platform-agent-debug
            port:
              number: 80

      - path: /api/project
        pathType: Prefix
        backend:
          service:
            name: secflow-platform-project
            port:
              number: 80

      - path: /api/resource
        pathType: Prefix
        backend:
          service:
            name: secflow-platform-resource
            port:
              number: 80

      - path: /api/packages
        pathType: Prefix
        backend:
          service:
            name: secflow-platform-static-binary
            port:
              number: 80

      - path: /api/deploy-script
        pathType: Prefix
        backend:
          service:
            name: secflow-platform-deploy-script
            port:
              number: 80

      - path: /api/app/code-server
        pathType: Prefix
        backend:
          service:
            name: secflow-app-code-server
            port:
              number: 80

      - path: /api/workflow
        pathType: Prefix
        backend:
          service:
            name: secflow-platform-workflow
            port:
              number: 80
