99-external-service/13-secflow-00-ingress-for-release.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secflow-ingress
  namespace: secflow-ns
  annotations:
    # 只使用安全的注解
    # 支持最大10G文件上传
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "10240m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/websocket-services: "secflow-platform-agent"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - secflow.sothothv2.com
    secretName: wildcard-sothothv2.com-tls
  rules:
  - host: secflow.sothothv2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: secflow-platform-frontend
            port:
              number: 80
      - path: /api/menu
        pathType: Prefix
        backend:
          service:
            name: secflow-platform-menu
            port:
              number: 80

      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: secflow-platform-auth
            port:
              number: 80

      - path: /api/agent
        pathType: Prefix
        backend:
          service:
            name: secflow-platform-agent
            port:
              number: 80

      - path: /api/project
        pathType: Prefix
        backend:
          service:
            name: secflow-platform-project
            port:
              number: 80

      - path: /api/configcenter
        pathType: Prefix
        backend:
          service:
            name: secflow-platform-configcenter
            port:
              number: 80

      - path: /api/resource
        pathType: Prefix
        backend:
          service:
            name: secflow-platform-resource
            port:
              number: 80

      - path: /api/fileserver
        pathType: Prefix
        backend:
          service:
            name: secflow-platform-fileserver
            port:
              number: 80

      - path: /api/packages
        pathType: Prefix
        backend:
          service:
            name: secflow-platform-static-binary
            port:
              number: 80

      - path: /api/deploy-script
        pathType: Prefix
        backend:
          service:
            name: secflow-platform-deploy-script
            port:
              number: 80

      - path: /api/k8s
        pathType: Prefix
        backend:
          service:
            name: secflow-platform-k8s
            port:
              number: 80

      - path: /api/workflow
        pathType: Prefix
        backend:
          service:
            name: secflow-platform-workflow
            port:
              number: 80

      - path: /api/app/code-server
        pathType: Prefix
        backend:
          service:
            name: secflow-app-code-server
            port:
              number: 80
