99-external-service/ingress-nginx-00-external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-script-ingress
  namespace: sothothv2-ns
  annotations:
    kubernetes.io/ingress.class: nginx
    # 设置客户端请求体最大大小（例如 100MB）
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
    # 设置上传文件的最大大小
    nginx.ingress.kubernetes.io/client-max-body-size: "500m"
    # 设置代理缓冲大小，处理大文件上传
    nginx.ingress.kubernetes.io/proxy-buffer-size: "1M"
    # 设置代理缓冲区数量和大小
    nginx.ingress.kubernetes.io/proxy-buffers-number: "16"
    # 设置连接超时时间
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    # 设置发送超时时间
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    # 设置读取超时时间
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    # 如果需要 HTTPS 上传，还可以设置 SSL 相关参数
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: static-binary-service
                port:
                  number: 8081
          - path: /script
            pathType: Prefix
            backend:
              service:
                name: client-script-service
                port:
                  number: 8082
